--- a/1.Introduction.md
+++ b/1.Introduction.md
@@ -4,9 +4,9 @@
 
 Annotation of protein-coding genes in an assembled genome is an essential process for genome sequencing projects. Structurally annotatted eukaryotic gene models provide precise information regarding the location of a gene on a chromosome, translation initiation sites, untranslated (UTR) regions, and critically, introns and exons containing coding sequences, among other features ([Yandel & Ence, 2012](https://www.nature.com/articles/nrg3174)). An annotated genome enables numerous inquiries into genetic and genomic questions, and thus is a critical building block for biological sciences. 
 
-Annotating gene models in non-model organisms is a challenging task, particularly in non-model eukarytotes which have more complicated gene structures than prokaryotes ([Yandel & Ence, 2012](https://www.nature.com/articles/nrg3174)) Non-models eukaryotes typically lack robust knowledge of gene models gained from decades of sanger sequencing, genetic modification of entire genes (e.g. knock-out studies), or genetic modification of single exons or sites that are routinely performed in model organisms. 
+Annotating gene models in non-model organisms is a challenging task, particularly in non-model eukarytotes which have more complicated gene structures than prokaryotes ([Yandel & Ence, 2012](https://www.nature.com/articles/nrg3174)). Non-model eukaryotic systems typically lack robust knowledge of gene model structure gleaned from decades of genetic research. Studies in model systems using methods such as sanger sequencing, genetic modification of entire genes (e.g. knock-out studies), modification of specific exons or sites, and numerous other genetic methods, allow for precise manual curation of gene model annotaitons.
 
-Genome annotaiton is a process that involves multiple software and decisions by the user that influence the quality of the output. The difficulty of annotation most often lies in the fact that the end result is unknown and potentially unkowable. Heuristic methods relying on positive or negative comparison to a reference can't be performed unless a reference annotation is already available. Although, there are many ad hoc evalution statistics that can assess annotaiton quality, including BUSCO [Simao et al. 2015](https://academic.oup.com/bioinformatics/article/31/19/3210/211866), the ratio of mono- to multi-exonic genes, or EnTAP gene prediction qulaity ([Vuruputoor et al. 2022](https://doi.org/10.1101/2022.10.03.510643)). These evulation methods can guide the selection of tools and outcomes in an annotation pipeline. 
+In non-model organisms where it is impracical to employ sophisticated genetic methods, genome annotaiton is carried out with multiple software, influenced by decisions by the user that influence the quality of the output. The difficulty of annotation most often lies in the fact that the end result is unknown and potentially unkowable. Heuristic methods relying on positive or negative comparison to a reference can't be performed unless a reference annotation is already available. Although, there are many ad hoc evalution statistics that can assess annotaiton quality, including BUSCO [Simao et al. 2015](https://academic.oup.com/bioinformatics/article/31/19/3210/211866), the ratio of mono- to multi-exonic genes, or EnTAP gene prediction qulaity ([Vuruputoor et al. 2022](https://doi.org/10.1101/2022.10.03.510643)). These evulation methods can guide the selection of tools and outcomes in an annotation pipeline. 
 
 Genome annotations fall into three broad categories: repeat annotation, structural annotaiton, and functional annotation. Before genome annotaiton can begin, an asssembled genome is required (tutorials for genome assembly can be found [here](https://bioinformatics.uconn.edu/resources-and-events/tutorials-2/)). Repeat annotaiton identifies repetitive elements in the genome which are then masked during down stream analyses. For projects interested in protein-coding genes, repetitive elements introduce uncertainity and masking them imrpoves annotation quality. RepeatModeler2 ([Flynn et al. 2020](https://www.pnas.org/doi/10.1073/pnas.1921046117)) or RepeatMasker ([Smit et al. 2013](https://www.repeatmasker.org/)) are common tools for repeat masking. 
 
