--- a/2.Running_EASEL.md
+++ b/2.Running_EASEL.md
@@ -1,7 +1,6 @@
 # Running EASEL
 
-EASEL is compiled as a nextflow script and is run by submitting a shell script to a job handler (e.g. slrum). Two files are required in a directory to run EASEL, a job submission script (`nextflow.sh`) and the starting nextflow script (`main.nf`) Edit path information, supplying the requreied inputs (genome, RNAseq reads, and outdir), and submit the job. 
-
+EASEL is compiled as a nextflow script and is run by submitting a shell script to a job handler (e.g. slrum). The files and environments for running EASEL have been copied to your folder on Xanadu located at `/home/FCAM/easel/`. Two files are required in a directory to run EASEL, a job submission script (`nextflow.sh`) and the starting nextflow script (`main.nf`) Edit path information, supplying the requreied inputs (genome, RNAseq reads, and outdir), and submit the job. 
 
 An EASEL run using the default parameters would have this statement in a bash script with the appropraite header for your job handler
 
@@ -47,8 +46,6 @@ The nextflow.sh file edits the config file. After running the job it will create
 ```
 show a tree of the files
 ```
-
-
 
 Show the two places to set the config file, the config file itslef, and how to launch nextflow on Xanadu
 
