--- a/2.Running_EASEL.md
+++ b/2.Running_EASEL.md
@@ -10,7 +10,10 @@ nextflow main.nf --genome /path/to/genome.fa --outdir /path/to/outdir --sra /pat
 
 ```
 
-Submitting EASEL to the slurm job handler on Xanadu would use a script like the following, called `nextflow.sh`
+
+### nextflow.sh
+
+Submitting EASEL to the slurm job handler on Xanadu would use a script like the following, called [`nextflow.sh`](files/nextflow.sh)
 
 ```
 #!/bin/bash
@@ -49,7 +52,10 @@ show a tree of the files
 
 Show the two places to set the config file, the config file itslef, and how to launch nextflow on Xanadu
 
-## Nextflow Config file
+### nextflow.config
 
-## Second config file
+The [`nextflow.config`](files/nextflow.config) file contains information on the job handler of the HPC, an ordered list of processes in the pipeline and paths to their modules on Xanadu, and a set of parameters regulating the behavior of EASEL. A user may want to change the items in the parameter block based on their input data (e.g. to loosen or tighten QC metrics).
 
+### main.nf
+
+The [`main.nf`](files/main.nf) file contains the arguments to EASEL that are passed on to the nextflow executors. The file is useful as a reference, but not much should be edited here.
